; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_extent.c_update_path.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_extent.c_update_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, %struct.TYPE_6__*, %struct.TYPE_8__*, i32, i32 }
%struct.TYPE_6__ = type { i64, %struct.ext3_extent_idx* }
%struct.ext3_extent_idx = type { i32, i32 }
%struct.TYPE_8__ = type { i32 }
%struct.ext3_extent_header = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_7__*)* @update_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @update_path(%struct.TYPE_7__* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_7__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.ext3_extent_idx*, align 8
  %7 = alloca %struct.ext3_extent_header*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %3, align 8
  %8 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = icmp eq i32 %10, 0
  br i1 %11, label %12, label %23

12:                                               ; preds = %1
  %13 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %13, i32 0, i32 2
  %15 = load %struct.TYPE_8__*, %struct.TYPE_8__** %14, align 8
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %16, i32 0, i32 3
  %18 = load i32, i32* %17, align 8
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 4
  %21 = load i32, i32* %20, align 4
  %22 = call i64 @ext2fs_write_inode(%struct.TYPE_8__* %15, i32 %18, i32 %21)
  store i64 %22, i64* %5, align 8
  br label %88

23:                                               ; preds = %1
  %24 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %24, i32 0, i32 1
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %25, align 8
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = sub nsw i32 %29, 1
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i64 %31
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 1
  %34 = load %struct.ext3_extent_idx*, %struct.ext3_extent_idx** %33, align 8
  store %struct.ext3_extent_idx* %34, %struct.ext3_extent_idx** %6, align 8
  %35 = load %struct.ext3_extent_idx*, %struct.ext3_extent_idx** %6, align 8
  %36 = getelementptr inbounds %struct.ext3_extent_idx, %struct.ext3_extent_idx* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = call i64 @ext2fs_le32_to_cpu(i32 %37)
  %39 = load %struct.ext3_extent_idx*, %struct.ext3_extent_idx** %6, align 8
  %40 = getelementptr inbounds %struct.ext3_extent_idx, %struct.ext3_extent_idx* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = call i64 @ext2fs_le16_to_cpu(i32 %41)
  %43 = trunc i64 %42 to i32
  %44 = shl i32 %43, 32
  %45 = sext i32 %44 to i64
  %46 = add nsw i64 %38, %45
  store i64 %46, i64* %4, align 8
  %47 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %48 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %47, i32 0, i32 1
  %49 = load %struct.TYPE_6__*, %struct.TYPE_6__** %48, align 8
  %50 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %51 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %50, i32 0, i32 0
  %52 = load i32, i32* %51, align 8
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %49, i64 %53
  %55 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %54, i32 0, i32 0
  %56 = load i64, i64* %55, align 8
  %57 = inttoptr i64 %56 to %struct.ext3_extent_header*
  store %struct.ext3_extent_header* %57, %struct.ext3_extent_header** %7, align 8
  %58 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %59 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %58, i32 0, i32 2
  %60 = load %struct.TYPE_8__*, %struct.TYPE_8__** %59, align 8
  %61 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %62 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %61, i32 0, i32 3
  %63 = load i32, i32* %62, align 8
  %64 = load %struct.ext3_extent_header*, %struct.ext3_extent_header** %7, align 8
  %65 = call i64 @ext2fs_extent_block_csum_set(%struct.TYPE_8__* %60, i32 %63, %struct.ext3_extent_header* %64)
  store i64 %65, i64* %5, align 8
  %66 = load i64, i64* %5, align 8
  %67 = icmp ne i64 %66, 0
  br i1 %67, label %68, label %70

68:                                               ; preds = %23
  %69 = load i64, i64* %5, align 8
  store i64 %69, i64* %2, align 8
  br label %90

70:                                               ; preds = %23
  %71 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %72 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %71, i32 0, i32 2
  %73 = load %struct.TYPE_8__*, %struct.TYPE_8__** %72, align 8
  %74 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %73, i32 0, i32 0
  %75 = load i32, i32* %74, align 4
  %76 = load i64, i64* %4, align 8
  %77 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %78 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %77, i32 0, i32 1
  %79 = load %struct.TYPE_6__*, %struct.TYPE_6__** %78, align 8
  %80 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %81 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %80, i32 0, i32 0
  %82 = load i32, i32* %81, align 8
  %83 = sext i32 %82 to i64
  %84 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %79, i64 %83
  %85 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %84, i32 0, i32 0
  %86 = load i64, i64* %85, align 8
  %87 = call i64 @io_channel_write_blk64(i32 %75, i64 %76, i32 1, i64 %86)
  store i64 %87, i64* %5, align 8
  br label %88

88:                                               ; preds = %70, %12
  %89 = load i64, i64* %5, align 8
  store i64 %89, i64* %2, align 8
  br label %90

90:                                               ; preds = %88, %68
  %91 = load i64, i64* %2, align 8
  ret i64 %91
}

declare dso_local i64 @ext2fs_write_inode(%struct.TYPE_8__*, i32, i32) #1

declare dso_local i64 @ext2fs_le32_to_cpu(i32) #1

declare dso_local i64 @ext2fs_le16_to_cpu(i32) #1

declare dso_local i64 @ext2fs_extent_block_csum_set(%struct.TYPE_8__*, i32, %struct.ext3_extent_header*) #1

declare dso_local i64 @io_channel_write_blk64(i32, i64, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
